\name{NEWS}
\title{News for package \pkg{BgeeCall}}

\section{Version 1.0.0 (2019-02)}{
  \itemize{
    \item Public release of BgeeCall package. Enjoy!!!
  }
}