@@ -6,3 +6,10 @@
     \item Public release of BgeeCall package. Enjoy!!!
   }
 }
+\section{Version 1.0.1 (2019-08)}{
+  \itemize{
+    \item Change kmer size of kallisto index from 21 to 15 for libraries with readLength <= 50bp.
+    \item Can choose the output directory
+    \item By default use a simpler arborescence for the output directory
+  }
+}
